# matcha-api

./: .gitignore  Cargo.toml  LICENSE  README.md  symbols.py
.github/workflows/: CI.yml  check.yml
matcha_api/: Cargo.toml  main.py
matcha_api/src/: main.rs
matcha_core/: Cargo.toml  main.py
matcha_core/src/: error.rs  general.rs  generator.rs  lib.rs  symbols.json  text.rs  utils.rs  vocoder.rs
pymatcha/: Cargo.toml  main.py  pyproject.toml
pymatcha/src/: generator.rs  lib.rs
