[package]
name = "matcha_api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.7"
dotenvy = "0.15.7"
log = "0.4.22"
matcha_core = { version = "0.1.0", path = "../matcha_core" }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }

[features]
cuda = ["matcha_core/cuda"]