[package]
name = "matcha_core"
version = "0.1.0"
edition = "2021"

[dependencies]
jpreprocess = { version = "0.10.0", features = ["naist-jdic"] }
num_cpus = "1.16.0"
once_cell = "1.20.2"
ort = { git = "https://github.com/pykeio/ort.git", version = "2.0.0-rc.6" }
serde_json = "1.0.128"
thiserror = "1.0.64"

[dev-dependencies]
anyhow = "1.0.89"
